tests/machine/x/cpp/group_by_sort.error
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:79:36: error: ‘struct Grouped’ has no member named ‘cat’
   79 |   decltype(std::declval<Grouped>().cat) key;
      |                                    ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:79:36: error: ‘struct Grouped’ has no member named ‘cat’
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:21: error: no match for ‘operator==’ (operand types are ‘int’ and ‘std::__cxx11::basic_string<char>’)
  136 |         if (__g.key == __key) {
      |             ~~~~~~~ ^~ ~~~~~
      |                 |      |
      |                 int    std::__cxx11::basic_string<char>
In file included from /usr/include/x86_64-linux-gnu/c++/13/bits/c++allocator.h:33,
                 from /usr/include/c++/13/bits/allocator.h:46,
                 from /usr/include/c++/13/string:43,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:4:
/usr/include/c++/13/bits/new_allocator.h:215:9: note: candidate: ‘template<class _Up> bool std::operator==(const __new_allocator<char>&, const __new_allocator<_Tp>&)’
  215 |         operator==(const __new_allocator&, const __new_allocator<_Up>&)
      |         ^~~~~~~~
/usr/include/c++/13/bits/new_allocator.h:215:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   ‘std::__cxx11::basic_string<char>’ is not derived from ‘const std::__new_allocator<_Tp>’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:64,
                 from /usr/include/c++/13/algorithm:60,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:2:
/usr/include/c++/13/bits/stl_pair.h:812:5: note: candidate: ‘template<class _T1, class _T2> constexpr bool std::operator==(const pair<_T1, _T2>&, const pair<_T1, _T2>&)’
  812 |     operator==(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_pair.h:812:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   mismatched types ‘const std::pair<_T1, _T2>’ and ‘int’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:67:
/usr/include/c++/13/bits/stl_iterator.h:448:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_Iterator>&)’
  448 |     operator==(const reverse_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:448:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  493 |     operator==(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1678 |     operator==(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorL>&)’
 1748 |     operator==(const move_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/iosfwd:42,
                 from /usr/include/c++/13/ios:40:
/usr/include/c++/13/bits/postypes.h:192:5: note: candidate: ‘template<class _StateT> bool std::operator==(const fpos<_StateT>&, const fpos<_StateT>&)’
  192 |     operator==(const fpos<_StateT>& __lhs, const fpos<_StateT>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/postypes.h:192:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   mismatched types ‘const std::fpos<_StateT>’ and ‘int’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note: candidate: ‘template<class _T1, class _T2> bool std::operator==(const allocator<_CharT>&, const allocator<_T2>&)’
  237 |     operator==(const allocator<_T1>&, const allocator<_T2>&)
      |     ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   mismatched types ‘const std::allocator<_CharT>’ and ‘int’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/basic_string.h:47,
                 from /usr/include/c++/13/string:54:
/usr/include/c++/13/string_view:609:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, basic_string_view<_CharT, _Traits>)’
  609 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:609:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   mismatched types ‘std::basic_string_view<_CharT, _Traits>’ and ‘int’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/string_view:616:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, __type_identity_t<basic_string_view<_CharT, _Traits> >)’
  616 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:616:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   mismatched types ‘std::basic_string_view<_CharT, _Traits>’ and ‘int’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/string_view:642:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(__type_identity_t<basic_string_view<_CharT, _Traits> >, basic_string_view<_CharT, _Traits>)’
  642 |     operator==(__type_identity_t<basic_string_view<_CharT, _Traits>> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:642:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   ‘std::__cxx11::basic_string<char>’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3710 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3727 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3774 |     operator==(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   mismatched types ‘const _CharT*’ and ‘int’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/memory_resource.h:47,
                 from /usr/include/c++/13/string:58:
/usr/include/c++/13/tuple:1919:5: note: candidate: ‘template<class ... _TElements, class ... _UElements> constexpr bool std::operator==(const tuple<_UTypes ...>&, const tuple<_UTypes ...>&)’
 1919 |     operator==(const tuple<_TElements...>& __t,
      |     ^~~~~~~~
/usr/include/c++/13/tuple:1919:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   mismatched types ‘const std::tuple<_UTypes ...>’ and ‘int’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/locale_facets.h:48,
                 from /usr/include/c++/13/bits/basic_ios.h:37,
                 from /usr/include/c++/13/ios:46:
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note: candidate: ‘template<class _CharT, class _Traits> bool std::operator==(const istreambuf_iterator<_CharT, _Traits>&, const istreambuf_iterator<_CharT, _Traits>&)’
  234 |     operator==(const istreambuf_iterator<_CharT, _Traits>& __a,
      |     ^~~~~~~~
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   mismatched types ‘const std::istreambuf_iterator<_CharT, _Traits>’ and ‘int’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/map:63,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:5:
/usr/include/c++/13/bits/stl_map.h:1513:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator==(const map<_Key, _Tp, _Compare, _Allocator>&, const map<_Key, _Tp, _Compare, _Allocator>&)’
 1513 |     operator==(const map<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_map.h:1513:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   mismatched types ‘const std::map<_Key, _Tp, _Compare, _Allocator>’ and ‘int’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/map:64:
/usr/include/c++/13/bits/stl_multimap.h:1134:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator==(const multimap<_Key, _Tp, _Compare, _Allocator>&, const multimap<_Key, _Tp, _Compare, _Allocator>&)’
 1134 |     operator==(const multimap<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_multimap.h:1134:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   mismatched types ‘const std::multimap<_Key, _Tp, _Compare, _Allocator>’ and ‘int’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/unordered_map:41,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:8:
/usr/include/c++/13/bits/unordered_map.h:2143:5: note: candidate: ‘template<class _Key1, class _Tp1, class _Hash1, class _Pred1, class _Alloc1> bool std::operator==(const unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&, const unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&)’
 2143 |     operator==(const unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/unordered_map.h:2143:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   mismatched types ‘const std::unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>’ and ‘int’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/unordered_map.h:2157:5: note: candidate: ‘template<class _Key1, class _Tp1, class _Hash1, class _Pred1, class _Alloc1> bool std::operator==(const unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&, const unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&)’
 2157 |     operator==(const unordered_multimap<_Key, _Tp, _Hash, _Pred, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/unordered_map.h:2157:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   mismatched types ‘const std::unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>’ and ‘int’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/vector:66,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:10:
/usr/include/c++/13/bits/stl_vector.h:2040:5: note: candidate: ‘template<class _Tp, class _Alloc> bool std::operator==(const vector<_Tp, _Alloc>&, const vector<_Tp, _Alloc>&)’
 2040 |     operator==(const vector<_Tp, _Alloc>& __x, const vector<_Tp, _Alloc>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:2040:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:136:24: note:   mismatched types ‘const std::vector<_Tp, _Alloc>’ and ‘int’
  136 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/allocator.h:216:7: note: candidate: ‘bool std::operator==(const allocator<char>&, const allocator<char>&)’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |       ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:216:18: note:   no known conversion for argument 1 from ‘int’ to ‘const std::allocator<char>&’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |                  ^~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/bits/ios_base.h:46:
/usr/include/c++/13/system_error:449:3: note: candidate: ‘bool std::operator==(const error_code&, const error_code&)’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:449:32: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_code&’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:465:3: note: candidate: ‘bool std::operator==(const error_code&, const error_condition&)’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:465:32: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_code&’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:480:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_condition&)’
  480 |   operator==(const error_condition& __lhs,
      |   ^~~~~~~~
/usr/include/c++/13/system_error:480:37: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_condition&’
  480 |   operator==(const error_condition& __lhs,
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:517:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_code&)’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:517:37: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_condition&’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:143:38: error: cannot convert ‘std::__cxx11::basic_string<char>’ to ‘int’ in initialization
  143 |         __groups.push_back(__struct3{__key, std::vector<Grouped>{Grouped{i}}});
      |                                      ^~~~~
      |                                      |
      |                                      std::__cxx11::basic_string<char>
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:151:63: error: ‘struct Grouped’ has no member named ‘val’
  151 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                                                               ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:151:63: error: ‘struct Grouped’ has no member named ‘val’
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:151:67: error: template argument 1 is invalid
  151 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                                                                   ^
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:151:67: error: template argument 2 is invalid
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:153:28: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  153 |                    __items.push_back(x.val);
      |                            ^~~~~~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:153:40: error: ‘struct Grouped’ has no member named ‘val’
  153 |                    __items.push_back(x.val);
      |                                        ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:149:80:   required from here
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:149:54: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  149 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |                                                    ~~^~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:149:65: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  149 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |                                                               ~~^~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:161:63: error: ‘struct Grouped’ has no member named ‘val’
  161 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                                                               ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:161:63: error: ‘struct Grouped’ has no member named ‘val’
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:161:67: error: template argument 1 is invalid
  161 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                                                                   ^
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:161:67: error: template argument 2 is invalid
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:163:28: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  163 |                    __items.push_back(x.val);
      |                            ^~~~~~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:163:40: error: ‘struct Grouped’ has no member named ‘val’
  163 |                    __items.push_back(x.val);
      |                                        ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:2)> [with auto:2 = int]’:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:160:18:   required from here
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:159:43: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  159 |                  return std::accumulate(v.begin(), v.end(), 0.0);
      |                                         ~~^~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:159:54: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  159 |                  return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                    ~~^~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:148:24: error: no matching function for call to ‘std::vector<std::pair<double, __struct4> >::push_back(<brace-enclosed initializer list>)’
  148 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~^
  149 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  150 |                ([&]() {
      |                ~~~~~~~~ 
  151 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  152 |                  for (auto x : g.items) {
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~
  153 |                    __items.push_back(x.val);
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~
  154 |                  }
      |                  ~      
  155 |                  return __items;
      |                  ~~~~~~~~~~~~~~~
  156 |                })())),
      |                ~~~~~~~  
  157 |            __struct4{
      |            ~~~~~~~~~~   
  158 |                g.key, ([&](auto v) {
      |                ~~~~~~~~~~~~~~~~~~~~~
  159 |                  return std::accumulate(v.begin(), v.end(), 0.0);
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  160 |                })(([&]() {
      |                ~~~~~~~~~~~
  161 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  162 |                  for (auto x : g.items) {
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~
  163 |                    __items.push_back(x.val);
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~
  164 |                  }
      |                  ~      
  165 |                  return __items;
      |                  ~~~~~~~~~~~~~~~
  166 |                })())}});
      |                ~~~~~~~~ 
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::pair<double, __struct4>; _Alloc = std::allocator<std::pair<double, __struct4> >; value_type = std::pair<double, __struct4>]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::pair<double, __struct4> >::value_type&’ {aka ‘const std::pair<double, __struct4>&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = std::pair<double, __struct4>; _Alloc = std::allocator<std::pair<double, __struct4> >; value_type = std::pair<double, __struct4>]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<std::pair<double, __struct4> >::value_type&&’ {aka ‘std::pair<double, __struct4>&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp: In function ‘int main()’:
/workspace/mochi/tests/machine/x/cpp/group_by_sort.cpp:174:5: error: conversion from ‘vector<__struct4>’ to non-scalar type ‘vector<Grouped>’ requested
  130 |   std::vector<Grouped> grouped = ([&]() {
      |                                  ~~~~~~~~
  131 |     std::vector<__struct3> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  132 |     for (auto i : items) {
      |     ~~~~~~~~~~~~~~~~~~~~~~
  133 |       auto __key = i.cat;
      |       ~~~~~~~~~~~~~~~~~~~
  134 |       bool __found = false;
      |       ~~~~~~~~~~~~~~~~~~~~~
  135 |       for (auto &__g : __groups) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  136 |         if (__g.key == __key) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~
  137 |           __g.items.push_back(Grouped{i});
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  138 |           __found = true;
      |           ~~~~~~~~~~~~~~~
  139 |           break;
      |           ~~~~~~
  140 |         }
      |         ~
  141 |       }
      |       ~
  142 |       if (!__found) {
      |       ~~~~~~~~~~~~~~~
  143 |         __groups.push_back(__struct3{__key, std::vector<Grouped>{Grouped{i}}});
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  144 |       }
      |       ~
  145 |     }
      |     ~
  146 |     std::vector<std::pair<double, __struct4>> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  147 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  148 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~~
  149 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  150 |                ([&]() {
      |                ~~~~~~~~
  151 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  152 |                  for (auto x : g.items) {
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~
  153 |                    __items.push_back(x.val);
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~
  154 |                  }
      |                  ~
  155 |                  return __items;
      |                  ~~~~~~~~~~~~~~~
  156 |                })())),
      |                ~~~~~~~
  157 |            __struct4{
      |            ~~~~~~~~~~
  158 |                g.key, ([&](auto v) {
      |                ~~~~~~~~~~~~~~~~~~~~~
  159 |                  return std::accumulate(v.begin(), v.end(), 0.0);
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  160 |                })(([&]() {
      |                ~~~~~~~~~~~
  161 |                  std::vector<decltype(std::declval<Grouped>().val)> __items;
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  162 |                  for (auto x : g.items) {
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~
  163 |                    __items.push_back(x.val);
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~
  164 |                  }
      |                  ~
  165 |                  return __items;
      |                  ~~~~~~~~~~~~~~~
  166 |                })())}});
      |                ~~~~~~~~~
  167 |     }
      |     ~
  168 |     std::sort(__items.begin(), __items.end(),
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  169 |               [](auto &a, auto &b) { return a.first < b.first; });
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  170 |     std::vector<__struct4> __res;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  171 |     for (auto &p : __items)
      |     ~~~~~~~~~~~~~~~~~~~~~~~
  172 |       __res.push_back(p.second);
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~
  173 |     return __res;
      |     ~~~~~~~~~~~~~
  174 |   })();
      |   ~~^~
